--- a/Projects.html
+++ b/Projects.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="topNavbar">
-        <a class="active" href="Index.html">Home</a>
-        <a class="passive" href="Index.html#About_section">About Me</a>
+        <a class="active" href="index.html">Home</a>
+        <a class="passive" href="index.html#About_section">About Me</a>
         <a class="passive" href="Projects.html">Projects</a>
     </div>
 
