--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="topNavbar">
-        <a class="active" href="Index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a class="passive" href="#About_section">About Me</a>
         <a class="passive" href="Projects.html">Projects</a>
     </div>
