Mobile adaptation, grid text

--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
         <a class="passive" href="Projects.html">Projects</a>
     </div>
 
-    <div id="Heading">
-        <h1>Peter Døvle </h1>
-    </div>
+    <section id="aboutMeGrid" class="griddy">
+        <div class="item1">
+            <h1>Peter Døvle </h1>
+        </div>
+        <div class="item2">
+            <p> </p>
+        </div>
+        <div class="item3">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia doloremque laboriosam officiis. Repudiandae laudantium accusantium, voluptatem id eius ipsum harum deserunt voluptate, totam ipsa, voluptas rerum aliquid vitae facilis dolorum.</p>
+        </div>
+        <div class="item4">
+            <p> </p>
+        </div>
 
-    <div class="inline_paragraph">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex velit, ipsam cumque autem architecto eaque aut rerum inventore excepturi iste porro voluptatem similique vero assumenda repudiandae eligendi non deleniti animi cupiditate odit neque! Ab ut in repellendus, facilis quis molestiae consectetur, eaque dolorem expedita nam porro quaerat culpa, minima distinctio?</p>
-    </div>   
+        
+    </section>
+
     
     <div class="footer" id="social_media">
         <a href="https://www.facebook.com/profile.php?id=100040382704842" 
