image and mobile fix

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia doloremque laboriosam officiis. Repudiandae laudantium accusantium, voluptatem id eius ipsum harum deserunt voluptate, totam ipsa, voluptas rerum aliquid vitae facilis dolorum.</p>
         </div>
         <div class="item4">
+            <img src="images\Peter_dovle.png" width="150vw" height="150vh">
+        </div>
+        <div class="item5">
             <p> </p>
         </div>
 
