--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter Døvle</title>
     <link rel="stylesheet" href="styles\index_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image" href="images\Peter.ico">
 </head>
 
 <body>
     <div id="topNavbar">
-        <a class="active" href="index.html">Home</a>
-        <a class="passive" href="#About_section">About Me</a>
+        <a class="active" href="Index.html">Home</a>
         <a class="passive" href="Projects.html">Projects</a>
+        <a class="passive" href="Experience.html">Skills and Experience</a>
     </div>
 
     <section id="aboutMeGrid" class="griddy">
@@ -23,7 +24,7 @@
             <p> </p>
         </div>
         <div class="item3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia doloremque laboriosam officiis. Repudiandae laudantium accusantium, voluptatem id eius ipsum harum deserunt voluptate, totam ipsa, voluptas rerum aliquid vitae facilis dolorum.</p>
+            <p>Jeg heter Peter Døvle, bor på Manglerud i Oslo, og går på Kuben Videregående Skole på VG2 datateknologi og elektronikk. Siden pappa jobber i elektronikk-bransjen, så har jeg blitt tidlig introdusert til elektronikk, og fikk en stor interesse for det, både på et hardware og software nivå, og jeg har lært meg mye om programmering og kretskobling, og er spesielt interresert i den sistnevnte</p>
         </div>
         <div class="item4">
             <img src="images\Peter_dovle.png" width="150vw" height="150vh">
@@ -31,8 +32,6 @@
         <div class="item5">
             <p> </p>
         </div>
-
-        
     </section>
 
     
