--- a/Experience.html
+++ b/Experience.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="topNavbar">
-        <a class="active" href="Index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a class="passive" href="Projects.html">Projects</a>
         <a class="passive" href="Experience.html">Skills and Experience</a>
     </div>
