--- a/Experience.html
+++ b/Experience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,13 +12,76 @@
     <div id="topNavbar">
         <a class="active" href="index.html">Home</a>
         <a class="passive" href="Projects.html">Projects</a>
-        <a class="passive" href="Experience.html">Skills and Experience</a>
+        <a class="passive" href="Experience.html">Experience & Skills</a>
     </div>
 
+    <div class="header">
+        <h1>Erfaring og Skills</h1>
+    </div>
+
+    <section id="Texperience">
+        <div class="section_header">
+            <h2>Experience med Teknologi</h2>
+        </div>
+        <div id="TexperienceGrid" class="griddy">
+            <div class="subheader item1" id="PCB_assembly">
+                <h3>PCB Assembly</h3>
+            </div>
+
+            <div class="paragraph item2">
+                <p>
+                    Jeg er nokså erfaren med montering av kretskort. I mitt arbeid på elektronikk-laben ved fysisk institutt, Universitetet i Oslo, har jeg støtt på mange forskjellige kretser og komponenter som skulle monteres. Jeg har også blitt godt kjent med surface-mount komponenter, men også noen som var through-hole. På grunn av dette, så vet jeg hva for eksempel en 402 refererer til, dens utfordringer med å bli montert, men også hvordan man skal montere den på kretskortet.
+                </p>
+            </div>
+            <div class="item3">
+                <img src="images/PCB.png" width="180px" height="auto">
+            </div>
+
+            
+            <div class="subheader item4" id="Coding">
+                <h3>Coding</h3>
+            </div>
+
+            <div class="item5">
+                <img src="images/Coding.png" width="240px" height="auto">
+            </div>
+            <div class="paragraph item6">
+                <p>Pappa har jobbet med elektronikk og programmering av FPGA-er i lang tid, som er hvorfor jeg fikk mye interesse for programmering og kodeutvikling. Jeg er nokså god til å utvikle kode, feilsøke kode, også kan jeg det grunnleggende i programmeringsspråk som Python, Javascript, C og HTML.</p>
+            </div>
+
+        </div>
+    </section>
 
 
+    <section id="skillz">
+        <div class="section_header">
+            <h2>Skills og læring</h2>
+        </div>
+        <div id="SkillsGrid" class="griddy">
+            <div class="subheader item7" id="Math">
+                <h3>Matte</h3>
+            </div>
+            <div class="item8">
+                <p>
+                    Jeg har gode egenskaper i matte, og lærer logiske fag veldig raskt. R1-Matte tok jeg på egenhånd på bare 4 måneder, og jeg fikk 6 på eksamen denne mai måned som var. For tiden jobber jeg med R2-matte og Fysikk 1 hjemme.
+                </p>
+            </div>
+            <div class="item9">
+                <img src="images/Math.png" class="imageMath">
+            </div>
+
+            
+        </div>
+    </section>
+
+
+    <div class="spacing">
+        <br>
+        <br>
+    </div>
 
     <div class="footer" id="social_media">
+        <a href="tel:+4745159043" class="fa fa-phone"></a>
         <a href="https://www.facebook.com/profile.php?id=100040382704842" 
         class="fa fa-facebook" target="_blank"></a>
         <a href="https://github.com/peterdovle"
