--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="nb">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <div id="topNavbar">
         <a class="active" href="index.html">Home</a>
         <a class="passive" href="Projects.html">Projects</a>
-        <a class="passive" href="Experience.html">Skills and Experience</a>
+        <a class="passive" href="Experience.html">Experience & Skills</a>
     </div>
 
     <section id="aboutMeGrid" class="griddy">
@@ -36,6 +36,7 @@
 
     
     <div class="footer" id="social_media">
+        <a href="tel:+4745159043" class="fa fa-phone"></a>
         <a href="https://www.facebook.com/profile.php?id=100040382704842" 
         class="fa fa-facebook" target="_blank"></a>
         <a href="https://github.com/peterdovle"
