--- a/Projects.html
+++ b/Projects.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter Døvle - Projects</title>
     <link rel="stylesheet" href="styles\project_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image" href="images\Peter.ico">
 </head>
 <body>
     <div id="topNavbar">
         <a class="active" href="index.html">Home</a>
         <a class="passive" href="Projects.html">Projects</a>
-        <a class="passive" href="Experience.html">Skills and Experience</a>
+        <a class="passive" href="Experience.html">Experience & Skills</a>
     </div>
 
     <div id="Project_header">
@@ -42,6 +43,7 @@
     
     
     <div class="footer" id="social_media">
+        <a href="tel:+4745159043" class="fa fa-phone"></a>
         <a href="https://www.facebook.com/profile.php?id=100040382704842" 
         class="fa fa-facebook" target="_blank"></a>
         <a href="https://github.com/peterdovle"
